// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`safeParseCdfBallotDefinition 1`] = `
Err {
  "error": [Error: unable to find an element matching a predicate],
}
`;

exports[`safeParseCdfBallotDefinition 2`] = `
Err {
  "error": [Error: Ballot definition contains duplicate @ids: same-id-0, same-id-1],
}
`;
